[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { git = "https://github.com/amethyst/bracket-lib", features = ["serde"] }
specs = { version = "0.20.0", features = ["serde"] }
specs-derive = "0.4.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
serde= { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.39"
ultraviolet = "0.9.2"
bracket-color = "~0.8"

[features]
serde = []